Re-enable warning for incompatible java launcher

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b29
    • Not verified

        NMT2 requires launcher to setup tracking flag during VM startup. If the tracking flag is not properly setup, VM should warn that incompatible launcher is used.

        The warning message is temporary disabled, due to integration gap between jdk and hotspot. It should be re-enabled once launcher change reaches promotion build.

              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: