8054547: Re-enable warning for incompatible java launcher

Re-enabled warning as launcher change reached promotion build

Reviewed-by: hseigel, coleenp